--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
+    <ul>
+        <li><a href="./recipies/lasagna.html">Ratatouille</a>
+           </li>
+        <li> <a href="./recipies/KrabbyPatty.html">Krabby Patty</a>
+            </li>
+        <li><a href="./recipies/Ramen.html">Ponyo's Ramen</a></li>
+    </ul>
 </body>
 </html>
