--- a/recipies/lasagna.html
+++ b/recipies/lasagna.html
@@ -1,1 +1,86 @@
-<h1>Lasagna</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>Ratatoullie</h1>
+    <img src="../assets/lasagna.jpg" alt="">
+
+    <div>
+        <h3>Description</h3>
+        <p>Ratatouille is a delicious and classic French vegetable stew that's not only flavorful but also healthy. It's
+            made with a variety of colorful vegetables and is typically served as a side dish or a main course.</p>
+    </div>
+
+    <div>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 eggplant (aubergine), cut into 1-inch cubes
+            </li>
+            <li>2 zucchinis, sliced
+            </li>
+            <li>
+                1 red bell pepper, cut into strips
+            </li>
+            <li>1 yellow bell pepper, cut into strips
+            </li>
+            <li>1 onion, thinly sliced
+            </li>
+            <li>3 cloves garlic, minced
+            </li>
+            <li> 4 tomatoes, diced
+            </li>
+            <li>2 tablespoons tomato paste
+            </li>
+            <li>2 teaspoons dried thyme
+            </li>
+            <li>2 teaspoons dried rosemary
+            </li>
+            <li>Salt and black pepper to taste
+            </li>
+            <li>Olive oil for sautéing
+            </li>
+            <li>Fresh basil leaves, for garnish (optional)</li>
+        </ul>
+    </div>
+
+    <div>
+        <h3>Steps:</h3>
+        <ol>
+            <li>Preheat the Oven: Preheat your oven to 375°F (190°C).</li>
+            <li>Prepare the Eggplant: Place the eggplant cubes in a colander, sprinkle with salt, and let them sit for
+                about 20-30 minutes. This helps remove excess moisture and bitterness. Afterward, rinse the eggplant
+                cubes and pat them dry with a paper towel.
+            </li>
+            <li> Sauté the Vegetables: In a large oven-safe skillet or Dutch oven, heat a few tablespoons of olive oil
+                over medium heat. Add the sliced onion and minced garlic. Sauté for about 2-3 minutes until they become
+                fragrant and translucent.
+            </li>
+            <li> Add the Bell Peppers: Add the red and yellow bell pepper strips to the skillet and continue to sauté
+                for another 3-4 minutes until they begin to soften.
+            </li>
+            <li> Add the Zucchini and Eggplant: Add the sliced zucchinis and eggplant cubes to the skillet. Continue to
+                cook for another 5-7 minutes, stirring occasionally, until the vegetables start to brown and soften.
+            </li>
+            <li> Add Tomatoes and Tomato Paste: Stir in the diced tomatoes, tomato paste, dried thyme, and dried
+                rosemary. Season with salt and black pepper to taste. Mix everything well.
+            </li>
+            <li> Simmer: Reduce the heat to low, cover the skillet, and let the mixture simmer for about 10-15 minutes.
+                This will allow the flavors to meld together, and the vegetables will become tender.
+            </li>
+            <li> Bake: If your skillet is oven-safe, you can place it directly in the preheated oven. Otherwise,
+                transfer the mixture to a baking dish. Bake for about 20-25 minutes until the ratatouille is bubbling
+                and the vegetables are tender.
+            </li>
+            <li> Garnish and Serve: Remove the ratatouille from the oven. If desired, garnish it with fresh basil
+                leaves. Serve it hot as a side dish or a main course.</li>
+        </ol>
+    </div>
+</body>
+
+</html>
